[Fix: styles] Body Overflow

--- a/src/public/less/common/super.less
+++ b/src/public/less/common/super.less
@@ -9,6 +9,7 @@
 }
 
 body {
+	overflow: auto;
 	background-color: #EEE;
 }
 
